Add basic config for bash/aliases

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,7 +1,9 @@
 FROM alpine:3.8
 
 RUN apk add --update \
+    bash \
     bind-tools \
+    coreutils \
     curl \
     git \
     htop \
@@ -14,3 +16,9 @@ RUN apk add --update \
     vim \
     wget \
   && rm -rf /var/cache/apk/*
+
+RUN git clone https://github.com/Thubo/helper-functions /root/.helper/functions
+RUN git clone https://github.com/Thubo/helper-aliases.git /root/.helper/aliases
+
+ADD ./home/bashrc /root/.bashrc
+ADD ./home/bash_profile /root/.bash_profile
